hotovo všetko cena skladu