@@ -6,28 +6,29 @@ import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
+import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 import javafx.scene.Scene;
 import javafx.scene.control.*;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
-import javafx.scene.layout.HBox;
+import javafx.scene.layout.GridPane;
 import javafx.scene.layout.VBox;
 import javafx.stage.Modality;
 import javafx.stage.Stage;
 
-import java.io.BufferedReader;
-import java.io.InputStream;
-import java.io.InputStreamReader;
+import java.io.*;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ResourceBundle;
 
 public class Controller implements Initializable {
 
-    private ObservableList<Nastroj> nastroje = FXCollections.observableArrayList();
+    private final ObservableList<Nastroj> nastroje = FXCollections.observableArrayList();
+    private final String CESTA_K_RESOURCES = "src/main/resources/orchester.txt";
 
     @FXML private TableView<Nastroj> table;
     @FXML private TableColumn<Nastroj, String> colNazov;
@@ -38,180 +39,136 @@ public class Controller implements Initializable {
     @FXML private TableColumn<Nastroj, Integer> colPocetZvukov;
     @FXML private TableColumn<Nastroj, Void> colAkcie;
     @FXML private TableColumn<Nastroj, Void> colAkcie1;
-    @FXML
-    private ListView<String> skladListView;
 
     @Override
     public void initialize(URL url, ResourceBundle resourceBundle) {
-
         colNazov.setCellValueFactory(c -> new SimpleStringProperty(c.getValue().getNazov()));
         colCena.setCellValueFactory(c -> new SimpleObjectProperty<>(c.getValue().getCena()));
         colPocet.setCellValueFactory(c -> new SimpleObjectProperty<>(c.getValue().getPocet()));
         colZvuk.setCellValueFactory(c -> new SimpleStringProperty(c.getValue().getZvuk()));
 
         colPocetKlavesov.setCellValueFactory(c -> {
-            if (c.getValue() instanceof KlavesovyNastroj) {
-                return new SimpleObjectProperty<>(((KlavesovyNastroj)c.getValue()).getPocetKlavesov());
-            }
-            return new SimpleObjectProperty<>(0);
+            if (c.getValue() instanceof KlavesovyNastroj k) return new SimpleObjectProperty<>(k.getPocetKlavesov());
+            return null;
         });
 
         colPocetZvukov.setCellValueFactory(c -> {
-            if (c.getValue() instanceof RytmickyNastroj) {
-                return new SimpleObjectProperty<>(((RytmickyNastroj)c.getValue()).getPocetZvukov());
-            }
-            return new SimpleObjectProperty<>(0);
+            if (c.getValue() instanceof RytmickyNastroj r) return new SimpleObjectProperty<>(r.getPocetZvukov());
+            return null;
         });
 
         table.setItems(nastroje);
         nastavAkcneStlpce();
-
         nacitaj();
     }
 
     private void nastavAkcneStlpce() {
-        colAkcie.setCellFactory(column -> new TableCell<>() {
-            private final Button button = vytvorIkonoveTlacidlo("/deleteicon.png", "Delete");
-
-            {
-                button.setOnAction(event -> {
-                    Nastroj nastroj = getTableView().getItems().get(getIndex());
-                    nastroje.remove(nastroj);
-                });
-                setAlignment(Pos.CENTER);
-            }
-
-            @Override
-            protected void updateItem(Void item, boolean empty) {
-                super.updateItem(item, empty);
-                setGraphic(empty ? null : button);
-            }
-        });
-
-        colAkcie1.setCellFactory(column -> new TableCell<>() {
-            private final Button button = vytvorIkonoveTlacidlo("/updateicon.png", "Update");
-
-            {
-                button.setOnAction(event -> {
-                    Nastroj nastroj = getTableView().getItems().get(getIndex());
-                    otvorFormular(nastroj);
-                });
-                setAlignment(Pos.CENTER);
-            }
-
-            @Override
-            protected void updateItem(Void item, boolean empty) {
-                super.updateItem(item, empty);
-                setGraphic(empty ? null : button);
-            }
-        });
-    }
-
-    private Button vytvorIkonoveTlacidlo(String resourcePath, String fallbackText) {
-        Button button = new Button();
-        button.setContentDisplay(ContentDisplay.GRAPHIC_ONLY);
-        button.setStyle("-fx-background-color: transparent; -fx-cursor: hand;");
-
-        InputStream stream = getClass().getResourceAsStream(resourcePath);
-        if (stream != null) {
-            ImageView imageView = new ImageView(new Image(stream));
-            imageView.setFitWidth(18);
-            imageView.setFitHeight(18);
-            imageView.setPreserveRatio(true);
-            button.setGraphic(imageView);
-        } else {
-            button.setText(fallbackText);
-            button.setContentDisplay(ContentDisplay.TEXT_ONLY);
-        }
-
-        return button;
+        colAkcie.setCellFactory(param -> new ButtonCell("Delete", "/deleteicon.png", nastroje::remove));
+        colAkcie1.setCellFactory(param -> new ButtonCell("Edit", "/updateicon.png", this::otvorFormular));
     }
 
     private void otvorFormular(Nastroj povodny) {
         Stage modal = new Stage();
         modal.initModality(Modality.APPLICATION_MODAL);
-        modal.setTitle("Upraviť nástroj");
+        modal.setTitle(povodny == null ? "Pridať nástroj" : "Upraviť nástroj");
 
-        TextField tfNazov = new TextField(povodny.getNazov());
-        TextField tfCena = new TextField(String.valueOf(povodny.getCena()));
-        TextField tfPocet = new TextField(String.valueOf(povodny.getPocet()));
-        TextField tfZvuk = new TextField(povodny.getZvuk());
-        TextField tfPocetKlavesov = new TextField(
-                povodny instanceof KlavesovyNastroj
-                        ? String.valueOf(((KlavesovyNastroj) povodny).getPocetKlavesov())
-                        : ""
-        );
-        TextField tfPocetZvukov = new TextField(
-                povodny instanceof RytmickyNastroj
-                        ? String.valueOf(((RytmickyNastroj) povodny).getPocetZvukov())
-                        : ""
-        );
+        GridPane grid = new GridPane();
+        grid.setHgap(10); grid.setVgap(10);
+        grid.setPadding(new Insets(20));
+
+        TextField tfNazov = new TextField(povodny != null ? povodny.getNazov() : "");
+        TextField tfCena = new TextField(povodny != null ? String.valueOf(povodny.getCena()) : "");
+        TextField tfPocet = new TextField(povodny != null ? String.valueOf(povodny.getPocet()) : "");
+        TextField tfZvuk = new TextField(povodny != null ? povodny.getZvuk() : "");
+
+        ComboBox<String> cbTyp = new ComboBox<>(FXCollections.observableArrayList("Klávesový", "Rytmický"));
+        TextField tfSpecialny = new TextField();
+        Label lblSpecialny = new Label();
+
+        if (povodny instanceof KlavesovyNastroj k) {
+            cbTyp.setValue("Klávesový");
+            lblSpecialny.setText("Počet klávesov:");
+            tfSpecialny.setText(String.valueOf(k.getPocetKlavesov()));
+        } else if (povodny instanceof RytmickyNastroj r) {
+            cbTyp.setValue("Rytmický");
+            lblSpecialny.setText("Počet zvukov:");
+            tfSpecialny.setText(String.valueOf(r.getPocetZvukov()));
+        } else {
+            cbTyp.setValue("Klávesový");
+            lblSpecialny.setText("Počet klávesov:");
+        }
+
+        cbTyp.setOnAction(e -> lblSpecialny.setText(cbTyp.getValue().equals("Klávesový") ? "Počet klávesov:" : "Počet zvukov:"));
+
+        grid.addRow(0, new Label("Názov:"), tfNazov);
+        grid.addRow(1, new Label("Cena (€):"), tfCena);
+        grid.addRow(2, new Label("Počet kusov:"), tfPocet);
+        grid.addRow(3, new Label("Zvuk:"), tfZvuk);
+        grid.addRow(4, new Label("Typ nástroja:"), cbTyp);
+        grid.addRow(5, lblSpecialny, tfSpecialny);
 
         Button btnUlozit = new Button("Uložiť");
         btnUlozit.setOnAction(e -> {
-            String nazov = tfNazov.getText();
-            double cena = Double.parseDouble(tfCena.getText());
-            int pocet = Integer.parseInt(tfPocet.getText());
-            String zvuk = tfZvuk.getText();
-            int pocetKlavesov = tfPocetKlavesov.getText().isBlank() ? 0 : Integer.parseInt(tfPocetKlavesov.getText());
-            int pocetZvukov = tfPocetZvukov.getText().isBlank() ? 0 : Integer.parseInt(tfPocetZvukov.getText());
+            try {
+                String nazov = tfNazov.getText();
+                double cena = Double.parseDouble(tfCena.getText());
+                int pocet = Integer.parseInt(tfPocet.getText());
+                String zvuk = tfZvuk.getText();
+                int spec = Integer.parseInt(tfSpecialny.getText());
 
-            Nastroj upraveny = pocetKlavesov > 0
-                    ? new KlavesovyNastroj(nazov, cena, zvuk, pocet, pocetKlavesov)
-                    : new RytmickyNastroj(nazov, cena, zvuk, pocet, pocetZvukov);
+                Nastroj novy = cbTyp.getValue().equals("Klávesový")
+                        ? new KlavesovyNastroj(nazov, cena, zvuk, pocet, spec)
+                        : new RytmickyNastroj(nazov, cena, zvuk, pocet, spec);
 
-            int index = nastroje.indexOf(povodny);
-            if (index >= 0) {
-                nastroje.set(index, upraveny);
+                if (povodny != null) nastroje.set(nastroje.indexOf(povodny), novy);
+                else nastroje.add(novy);
+
                 table.refresh();
+                modal.close();
+            } catch (Exception ex) {
+                new Alert(Alert.AlertType.ERROR, "Chybné údaje!").show();
             }
-            modal.close();
         });
 
-        VBox layout = new VBox(10,
-                new Label("Názov:"), tfNazov,
-                new Label("Cena:"), tfCena,
-                new Label("Počet:"), tfPocet,
-                new Label("Zvuk:"), tfZvuk,
-                new Label("Počet klávesov:"), tfPocetKlavesov,
-                new Label("Počet zvukov:"), tfPocetZvukov,
-                new HBox(btnUlozit)
-        );
-        ((HBox) layout.getChildren().get(layout.getChildren().size() - 1)).setAlignment(Pos.CENTER_RIGHT);
-        layout.setStyle("-fx-padding: 10;");
-
+        VBox layout = new VBox(10, grid, btnUlozit);
+        layout.setPadding(new Insets(10));
+        layout.setAlignment(Pos.CENTER);
         modal.setScene(new Scene(layout));
         modal.showAndWait();
     }
 
     @FXML
+    protected void pridajNastroj() {
+        otvorFormular(null);
+    }
+
+    @FXML
     protected void nacitaj() {
         try {
-            InputStream is = getClass().getResourceAsStream("/orchester.txt");
+            File file = new File(CESTA_K_RESOURCES);
+            InputStream is;
+
+            if (file.exists()) {
+                is = new FileInputStream(file);
+            } else {
+                is = getClass().getResourceAsStream("/orchester.txt");
+            }
+
             if (is == null) return;
 
-            BufferedReader br = new BufferedReader(new InputStreamReader(is));
+            BufferedReader br = new BufferedReader(new InputStreamReader(is, StandardCharsets.UTF_8));
             String line;
             nastroje.clear();
 
             while ((line = br.readLine()) != null) {
                 String[] data = line.split(",");
-
+                if (data.length < 6) continue;
                 if (data[0].equals("r")) {
-                    nastroje.add(new RytmickyNastroj(
-                            data[1], Double.parseDouble(data[2]),
-                            data[3], Integer.parseInt(data[4]),
-                            Integer.parseInt(data[5])
-                    ));
+                    nastroje.add(new RytmickyNastroj(data[1], Double.parseDouble(data[2]), data[3], Integer.parseInt(data[4]), Integer.parseInt(data[5])));
                 } else if (data[0].equals("k")) {
-                    nastroje.add(new KlavesovyNastroj(
-                            data[1], Double.parseDouble(data[2]),
-                            data[3], Integer.parseInt(data[4]),
-                            Integer.parseInt(data[5])
-                    ));
+                    nastroje.add(new KlavesovyNastroj(data[1], Double.parseDouble(data[2]), data[3], Integer.parseInt(data[4]), Integer.parseInt(data[5])));
                 }
             }
-
             br.close();
         } catch (Exception e) {
             e.printStackTrace();
@@ -221,101 +178,63 @@ public class Controller implements Initializable {
     @FXML
     protected void uloz() {
         try {
-            Path path = Path.of("src", "main", "resources", "orchester.txt");
+            Path path = Paths.get(CESTA_K_RESOURCES);
             StringBuilder obsah = new StringBuilder();
 
-            for (Nastroj nastroj : nastroje) {
-                if (nastroj instanceof RytmickyNastroj rytmickyNastroj) {
-                    obsah.append("r,")
-                            .append(rytmickyNastroj.getNazov()).append(",")
-                            .append(rytmickyNastroj.getCena()).append(",")
-                            .append(rytmickyNastroj.getZvuk()).append(",")
-                            .append(rytmickyNastroj.getPocet()).append(",")
-                            .append(rytmickyNastroj.getPocetZvukov());
-                } else if (nastroj instanceof KlavesovyNastroj klavesovyNastroj) {
-                    obsah.append("k,")
-                            .append(klavesovyNastroj.getNazov()).append(",")
-                            .append(klavesovyNastroj.getCena()).append(",")
-                            .append(klavesovyNastroj.getZvuk()).append(",")
-                            .append(klavesovyNastroj.getPocet()).append(",")
-                            .append(klavesovyNastroj.getPocetKlavesov());
+            for (Nastroj n : nastroje) {
+                if (n instanceof RytmickyNastroj r) {
+                    obsah.append("r,").append(r.getNazov()).append(",").append(r.getCena()).append(",")
+                            .append(r.getZvuk()).append(",").append(r.getPocet()).append(",").append(r.getPocetZvukov());
+                } else if (n instanceof KlavesovyNastroj k) {
+                    obsah.append("k,").append(k.getNazov()).append(",").append(k.getCena()).append(",")
+                            .append(k.getZvuk()).append(",").append(k.getPocet()).append(",").append(k.getPocetKlavesov());
                 }
                 obsah.append(System.lineSeparator());
             }
 
             Files.writeString(path, obsah.toString(), StandardCharsets.UTF_8);
+            new Alert(Alert.AlertType.INFORMATION, "Uložené do resources!").show();
+
         } catch (Exception e) {
             e.printStackTrace();
+            new Alert(Alert.AlertType.ERROR, "Chyba pri zápise!").show();
         }
     }
+
     @FXML
-    protected void pridajNastroj() {
-        Stage modal = new Stage();
-        modal.initModality(Modality.NONE);
-        modal.setTitle("Pridať nový nástroj");
-
-        TextField tfNazov = new TextField();
-        TextField tfCena = new TextField();
-        TextField tfPocet = new TextField();
-        TextField tfZvuk = new TextField();
-        TextField tfPocetKlavesov = new TextField();
-        TextField tfPocetZvukov = new TextField();
-
-        Button btnPridat = new Button("Pridať");
-        btnPridat.setOnAction(e -> {
-            String nazov = tfNazov.getText();
-            double cena = Double.parseDouble(tfCena.getText());
-            int pocet = Integer.parseInt(tfPocet.getText());
-            String zvuk = tfZvuk.getText();
-            int pocetKlavesov = tfPocetKlavesov.getText().isEmpty() ? 0 : Integer.parseInt(tfPocetKlavesov.getText());
-            int pocetZvukov = tfPocetZvukov.getText().isEmpty() ? 0 : Integer.parseInt(tfPocetZvukov.getText());
-
-            Nastroj novy;
-            if (pocetKlavesov > 0) {
-                novy = new KlavesovyNastroj(nazov, cena, zvuk, pocet, pocetKlavesov);
-            } else {
-                novy = new RytmickyNastroj(nazov, cena, zvuk, pocet, pocetZvukov);
-            }
-
-            nastroje.add(novy);
-            table.refresh();
-            modal.close();
-        });
-
-        VBox layout = new VBox(10,
-                new Label("Názov:"), tfNazov,
-                new Label("Cena:"), tfCena,
-                new Label("Počet:"), tfPocet,
-                new Label("Zvuk:"), tfZvuk,
-                new Label("Počet klávesov (len pre klávesy):"), tfPocetKlavesov,
-                new Label("Počet zvukov (len pre rytmické):"), tfPocetZvukov,
-                btnPridat
-        );
-        layout.setStyle("-fx-padding: 10;");
-
-        Scene scene = new Scene(layout);
-        modal.setScene(scene);
-        modal.show();
+    protected void cenaSkladu() {
+        double suma = nastroje.stream().mapToDouble(n -> n.getCena() * n.getPocet()).sum();
+        new Alert(Alert.AlertType.INFORMATION, "Celková cena: " + String.format("%.2f", suma) + " €").show();
     }
+
     @FXML
     protected void skladHraj() {
-        Stage modal = new Stage();
-        modal.initModality(Modality.APPLICATION_MODAL);
-        modal.setTitle("Cigáň hraj!");
-
-        ListView<String> listView = new ListView<>();
-        for (Nastroj n : nastroje) {
-            listView.getItems().add(n.getZvuk());
-        }
-
-        listView.setPrefSize(400, 300);
-
-        Scene scene = new Scene(listView);
-        modal.setScene(scene);
-        modal.showAndWait();
+        ListView<String> lv = new ListView<>();
+        nastroje.forEach(n -> lv.getItems().add(n.getZvuk()));
+        Stage stage = new Stage();
+        stage.setScene(new Scene(lv, 300, 400));
+        stage.setTitle("Koncert");
+        stage.show();
     }
-    @FXML
-    protected void cenaSkladu(){
 
+    private class ButtonCell extends TableCell<Nastroj, Void> {
+        private final Button btn = new Button();
+        public ButtonCell(String text, String iconPath, java.util.function.Consumer<Nastroj> action) {
+            btn.setStyle("-fx-background-color: transparent; -fx-cursor: hand;");
+            try {
+                InputStream is = getClass().getResourceAsStream(iconPath);
+                if (is != null) {
+                    ImageView iv = new ImageView(new Image(is));
+                    iv.setFitHeight(16); iv.setFitWidth(16);
+                    btn.setGraphic(iv);
+                } else btn.setText(text);
+            } catch (Exception e) { btn.setText(text); }
+            btn.setOnAction(e -> action.accept(getTableView().getItems().get(getIndex())));
+            setAlignment(Pos.CENTER);
+        }
+        @Override protected void updateItem(Void item, boolean empty) {
+            super.updateItem(item, empty);
+            setGraphic(empty ? null : btn);
+        }
     }
 }
